change button order, fix spacing

--- a/public/main.css
+++ b/public/main.css
@@ -61,6 +61,10 @@ th,
 td {
   padding: 0.75rem 1rem !important;
 }
+ hr {
+   background-color: var(--text-color) !important;
+   opacity: 0.1 !important;
+ }
 
 @media (min-width: 992px) {
   th,
